<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/txtv_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cliquer_ici_pour_vous_connecter"
        app:layout_constraintBottom_toTopOf="@+id/btn_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_simulate" />

    <Button
        android:id="@+id/btn_simulate"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/simulate_scan_point"
        app:layout_constraintBottom_toTopOf="@id/txtv_simulate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtv_login" />

    <Button
        android:id="@+id/btn_user"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtv_login" />

    <TextView
        android:id="@+id/txtv_simulate"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/cliquer_sur_le_boutton_en_dessous_pour_simuler_un_scanneur"
        app:layout_constraintBottom_toTopOf="@+id/btn_simulate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>